--- a/LimenawebApp/Views/Shared/main_Scripts.cshtml
+++ b/LimenawebApp/Views/Shared/main_Scripts.cshtml
@@ -26,6 +26,15 @@
 <!-- Custom JavaScript -->
 <script src="~/Content/main/assets/js/script.js"></script>
 <script src="~/Content/main/assets/js/custom/maps/gmaps.js"></script>
+<script src="~/Content/main/assets/js/custom/apps/app.js"></script>
+<script src="~/Content/main/node_modules/owl.carousel/dist/owl.carousel.min.js"></script>
+<script src="~/Content/main/assets/js/custom/widget.js"></script>
+
+<script src="~/Content/main/node_modules/datatables.net/js/jquery.dataTables.js"></script>
+<script src="~/Content/main/node_modules/datatables.net-bs4/js/dataTables.bootstrap4.js"></script>
+<script src="~/Content/main/assets/js/custom/data-table.js"></script>
+
+<script src="~/Content/appcontent/assets/vendor/js-init/bootstrap-number-input.js"></script>
 <!--FOR MENU-->
 <script>
     var string = @Html.Raw(ViewBag.lstDepartments);
