--- a/LimenawebApp/Views/Commercial/Credits_request.cshtml
+++ b/LimenawebApp/Views/Commercial/Credits_request.cshtml
@@ -137,7 +137,7 @@
     <div class="modal-dialog">
         <div class="modal-content">
             <div class="modal-header">
-                <h5 class="modal-title" id="mySmallModalLabel">New request</h5>
+                <h5 class="modal-title" id="mySmallModalLabel">New product control</h5>
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                     <span aria-hidden="true">&times;</span>
                 </button>
