--- a/LimenawebApp/Views/Shared/temp_header.cshtml
+++ b/LimenawebApp/Views/Shared/temp_header.cshtml
@@ -46,7 +46,7 @@
                             <!-- Dropdown Link -->
                             <a href="#" class="dt-nav__link dropdown-toggle no-arrow" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                                 <i class="icon icon-apps icon-sm icon-fw"></i>
-                                <span>Apps</span>
+                                <span>Quick Access</span>
                             </a>
                             <!-- /dropdown link -->
                             <!-- Dropdown Option -->
@@ -54,78 +54,13 @@
 
                                 <!-- Apps -->
                                 <ul class="dt-app-list">
-                                    <li class="dt-app-list__item">
+                                    @*<li class="dt-app-list__item">
                                         <a href="javascript:void(0)" class="dt-app-list__link">
                                             <img src="assets/images/icon/icon-account.png" alt="Google Account">
                                             <span class="dt-app-list__text">Account</span>
                                         </a>
-                                    </li>
-                                    <li class="dt-app-list__item">
-                                        <a href="javascript:void(0)" class="dt-app-list__link">
-                                            <img src="assets/images/icon/icon-google.png" alt="Google Search">
-                                            <span class="dt-app-list__text">Search</span>
-                                        </a>
-                                    </li>
-                                    <li class="dt-app-list__item">
-                                        <a href="javascript:void(0)" class="dt-app-list__link">
-                                            <img src="assets/images/icon/icon-map.png" alt="Google Map">
-                                            <span class="dt-app-list__text">Maps</span>
-                                        </a>
-                                    </li>
-                                    <li class="dt-app-list__item">
-                                        <a href="javascript:void(0)" class="dt-app-list__link">
-                                            <img src="assets/images/icon/icon-youtube.png" alt="Youtube">
-                                            <span class="dt-app-list__text">YouTube</span>
-                                        </a>
-                                    </li>
-                                    <li class="dt-app-list__item">
-                                        <a href="javascript:void(0)" class="dt-app-list__link">
-                                            <img src="assets/images/icon/icon-playstore.png" alt="Play Store">
-                                            <span class="dt-app-list__text">Play</span>
-                                        </a>
-                                    </li>
-                                    <li class="dt-app-list__item">
-                                        <a href="javascript:void(0)" class="dt-app-list__link">
-                                            <img src="assets/images/icon/icon-news.png" alt="Google News">
-                                            <span class="dt-app-list__text">News</span>
-                                        </a>
-                                    </li>
-                                    <li class="dt-app-list__item">
-                                        <a href="javascript:void(0)" class="dt-app-list__link">
-                                            <img src="assets/images/icon/icon-gmail.png" alt="Google Drive">
-                                            <span class="dt-app-list__text">Gmail</span>
-                                        </a>
-                                    </li>
-                                    <li class="dt-app-list__item">
-                                        <a href="javascript:void(0)" class="dt-app-list__link">
-                                            <img src="assets/images/icon/icon-drive.png" alt="Google Drive">
-                                            <span class="dt-app-list__text">Drive</span>
-                                        </a>
-                                    </li>
-                                    <li class="dt-app-list__item">
-                                        <a href="javascript:void(0)" class="dt-app-list__link">
-                                            <img src="assets/images/icon/icon-calendar.png" alt="Calendar">
-                                            <span class="dt-app-list__text">Calendar</span>
-                                        </a>
-                                    </li>
-                                    <li class="dt-app-list__item">
-                                        <a href="javascript:void(0)" class="dt-app-list__link">
-                                            <img src="assets/images/icon/icon-google-plus.png" alt="Google Plus">
-                                            <span class="dt-app-list__text">Google+</span>
-                                        </a>
-                                    </li>
-                                    <li class="dt-app-list__item">
-                                        <a href="javascript:void(0)" class="dt-app-list__link">
-                                            <img src="assets/images/icon/icon-translate.png" alt="Translate">
-                                            <span class="dt-app-list__text">Translate</span>
-                                        </a>
-                                    </li>
-                                    <li class="dt-app-list__item">
-                                        <a href="javascript:void(0)" class="dt-app-list__link">
-                                            <img src="assets/images/icon/icon-photos.png" alt="Photos">
-                                            <span class="dt-app-list__text">Photos</span>
-                                        </a>
-                                    </li>
+                                    </li>*@
+
                                 </ul>
                                 <!-- /apps -->
 
