--- a/LimenawebApp/Views/Inventory/Projects.cshtml
+++ b/LimenawebApp/Views/Inventory/Projects.cshtml
@@ -1,4 +1,4 @@
-﻿
+﻿@model List<LimenawebApp.Models.Inv_Projects>
 @{
     Layout = null;
 }
@@ -74,80 +74,88 @@
 
                                 <!-- Grid Item -->
                                 <div class="col-xl-12">
+                                    @foreach (var project in Model)
+    {
+                                <!-- Card -->
+                                <div class="dt-card">
 
-                                    <!-- Card -->
-                                    <div class="dt-card">
+                                    <!-- Card Body -->
+                                    <div class="dt-card__body">
 
-                                        <!-- Card Body -->
-                                        <div class="dt-card__body">
+                                        <!-- List -->
+                                        <div class="d-sm-flex flex-sm-row">
 
-                                            <!-- List -->
-                                            <div class="d-sm-flex flex-sm-row">
+                                            <!-- User Avatar
+            <img class="dt-avatar size-60 mr-6 mb-6 mb-sm-0"
+                 src="https://via.placeholder.com/150x150" alt="User">
+            <!-- /user avatar-->
+                                            <!-- Content -->
+                                            <div class="flex-1 overflow-hidden mb-6 mb-sm-0 pr-sm-3">
+                                                <div class="user-detail mb-3">
+                                                    <span class="user-name">@project.Name</span>
+                                                    <span class="dt-separator-v">&nbsp;</span>
+                                                    @if (project.isfinished == true)
+                    {<span class="badge sm badge badge-info mb-1 mr-1">Closed</span>
+}
+else
+{<span class="badge sm badge badge-success mb-1 mr-1"> Open</span>
+                                                  
+}
+                                                </div>
+                                                <div style="text-align:justify;">
+                                                    @project.Description
+                                            </div>
 
-                                                <!-- User Avatar
-                                        <img class="dt-avatar size-60 mr-6 mb-6 mb-sm-0"
-                                             src="https://via.placeholder.com/150x150" alt="User">
-                                        <!-- /user avatar-->
-                                                <!-- Content -->
-                                                <div class="flex-1 overflow-hidden mb-6 mb-sm-0 pr-sm-3">
-                                                    <div class="user-detail mb-3">
-                                                        <span class="user-name">Toma de inventario anual</span>
-                                                        <span class="dt-separator-v">&nbsp;</span>
-                                                        <span class="badge sm badge badge-success mb-1 mr-1">In progress</span>
-                                                    </div>
-                                                    <div style="text-align:justify;">
-
-                                                        Toma de inventario anual de productos en almacen distribuido por las areas de DRY, COOLER, REFRIGERATED.
-
-                                                    </div>
-
-                                                    <span class="min-w-150 d-inline-block border-top mb-2"></span>
-                                                    <div class="d-flex flex-wrap mb-4">
-                                                        <div class="pr-3">Total products: <span class="text-dark">1223</span></div>
-                                                        <div class="pr-3">Areas: <span class="text-dark">15</span></div>
-                                                        <div>Date: <span class="text-dark">15/10/2019</span></div>
-                                                    </div>
-                                                    <div class="d-flex flex-sm-row flex-column">
-                                                        <div>Progress: &nbsp; </div>
-                                                        <div class="dt-indicator-item__info" data-fill="82" data-max="100"
-                                                             data-percent="true"
-                                                             data-sufix="Job Success" style="width: 220px">
-                                                            <span class="dt-indicator-item__count text-success text-nowrap mr-3">0</span>
-                                                            <div class="dt-indicator-item__bar">
-                                                                <div class="dt-indicator-item__fill bg-success"></div>
-                                                            </div>
-                                                        </div>
+                                            <span class="min-w-150 d-inline-block border-top mb-2"></span>
+                                            <div class="d-flex flex-wrap mb-4">
+                                                <div class="pr-3">Total products: <span class="text-dark">0</span></div>
+                                                <div class="pr-3">Areas: <span class="text-dark">@project.Areas</span></div>
+                                                <div>Date: <span class="text-dark">@project.Creation_date.ToShortDateString()</span></div>
+                                            </div>
+                                            <div class="d-flex flex-sm-row flex-column">
+                                                <div>Progress: &nbsp; </div>
+                                                <div class="dt-indicator-item__info" data-fill="0" data-max="100"
+                                                     data-percent="true"
+                                                     data-sufix="Job Success" style="width: 220px">
+                                                    <span class="dt-indicator-item__count text-success text-nowrap mr-3">0</span>
+                                                    <div class="dt-indicator-item__bar">
+                                                        <div class="dt-indicator-item__fill bg-success"></div>
                                                     </div>
                                                 </div>
-                                                <!-- /content -->
+                                            </div>
+                                        </div>
+                                        <!-- /content -->
 
-                                                <div class="min-w-120">
-                                                    @if (ViewBag.adminRole)
-                                            {
-                                                <a href="@Url.Action("Binloc_master", "Inventory")"
-                                                   class="btn btn-primary text-uppercase btn-block">Details</a>
-                                                <a href="javascript:void(0)"
-                                                   class="btn btn-outline-light text-light-gray text-uppercase btn-block">
-                                                    <i class="icon icon-file-upload icon-fw"></i> <span>Close</span>
-                                                </a>
-
-                                    }
-                                    else
-                                    {
-                                        <a href="@Url.Action("Binloc", "Inventory")"
-                                           class="btn btn-primary text-uppercase btn-block">Details</a>
-                            }
+                                            <div class="min-w-120">
+                                                @if (ViewBag.adminRole)
+    {
+                                            <a href="@Url.Action("Binloc_master", "Inventory")"
+                                               class="btn btn-primary text-uppercase btn-block">Details</a>
+                                            
+                                               if (project.isfinished == false){
+                                            <a href="javascript:void(0)" onclick="deleteRequest(@project.ID_project)" class="btn btn-outline-light text-light-gray text-uppercase btn-block">
+                                                <i class="icon icon-trash icon-fw"></i> <span>Delete</span>
+                                            </a>}
 
 
-                                                </div>
+}
+else
+{
+                                            <a href="@Url.Action("Binloc", "Inventory", new { id=project.ID_project})"
+                                               class="btn btn-primary text-uppercase btn-block">Details</a>
+}
+
 
                                             </div>
-                                            <!-- /list -->
-
-                                        </div>
-                                        <!-- /card body -->
 
                                     </div>
+
+                                    <!-- /list -->
+
+                                </div>
+                                <!-- /card body -->
+
+                                </div>}
                                     <!-- /card -->
 
                                 </div>
@@ -177,6 +185,32 @@
     </div>
     <!-- /root -->
     @Html.Partial("~/Views/Shared/main_Scripts.cshtml")
+    <script>
+                    function deleteRequest(id) {
 
+                swal({
+                    title: "Delete project",
+                    text: "Are you sure you want to delete this project?",
+                    icon: "warning",
+                    showCloseButton: true,
+                    showCancelButton: true,
+                    confirmButtonColor: '#3d4a6d',
+                    focusConfirm: false,
+                    confirmButtonText: 'Yes',
+                    cancelButtonText: 'No'
+                }).then((willDelete) => {
+                    if (willDelete.value) {
+                       
+                            var url = '@Url.Action("DeleteProject", "Inventory", new { id = "AUREQ" })';
+                        url = url.replace('AUREQ', id);
+                        var newurl = url;
+                        window.location.href = newurl;
+                        } else {
+                     
+                        }
+                    });
+
+            }
+    </script>
 </body>
 </html>
